--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
 /*  your css code here. If applicable */
+.container{
+	width: 300px;
+    margin: 40px auto;
+    padding: 20px;
+    border: 2px solid black;
+    border-radius: 12px;
+    text-align: center;
+}
+.red, .green, .yellow {
+    width: 60px;
+    height: 60px;
+    display: inline-block;
+    border-radius: 50%;
+    margin: 10px;
+}
+.red {
+    background-color: red;
+}
+
+.green {
+    background-color: green;
+}
+
+.yellow {
+    background-color: yellow;
+}
